Created a Dockerfile for deployment